[gd_scene load_steps=9 format=3 uid="uid://d24avmu8mgap0"]

[ext_resource type="Script" path="res://resources/global/start_screen/start_screen.gd" id="1_q2plu"]
[ext_resource type="Script" path="res://resources/global/start_screen/Preview_Mesh.gd" id="2_w2fsp"]

[sub_resource type="LabelSettings" id="LabelSettings_40gqo"]
font_size = 18

[sub_resource type="ButtonGroup" id="ButtonGroup_skrmg"]

[sub_resource type="LabelSettings" id="LabelSettings_mhvjx"]
font_size = 36

[sub_resource type="ViewportTexture" id="ViewportTexture_qacut"]
viewport_path = NodePath("UserDetailsPanel/Preview/SubViewport")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_copcr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ae03o"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_q2plu")

[node name="BGColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.825
anchor_bottom = 16.2
color = Color(0.329412, 0.105882, 0.533333, 1)

[node name="DemoSelectorLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 521.0
offset_top = 159.0
offset_right = 619.0
offset_bottom = 185.0
text = "Demo Type
"
label_settings = SubResource("LabelSettings_40gqo")

[node name="DemoSelector" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 475.0
offset_top = 191.0
offset_right = 676.0
offset_bottom = 222.0
button_group = SubResource("ButtonGroup_skrmg")

[node name="HeaderLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 100.0
offset_right = 786.0
offset_bottom = 150.0
text = "The Multiplayer Demo"
label_settings = SubResource("LabelSettings_mhvjx")

[node name="UserDetailsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 317.0
offset_top = 238.0
offset_right = 556.0
offset_bottom = 504.0

[node name="ColorPicker" type="ColorPickerButton" parent="UserDetailsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 12.179
anchor_top = 8.839
anchor_right = 12.179
anchor_bottom = 8.839
offset_left = -2901.78
offset_top = -2313.17
offset_right = -2848.78
offset_bottom = -2263.17

[node name="NameLineEdit" type="LineEdit" parent="UserDetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = 48.0
offset_right = -18.0
offset_bottom = -187.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "User Name"

[node name="Preview" type="Sprite2D" parent="UserDetailsPanel"]
position = Vector2(122, 171)
scale = Vector2(0.246094, 0.197266)
texture = SubResource("ViewportTexture_qacut")

[node name="SubViewport" type="SubViewport" parent="UserDetailsPanel/Preview"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="UserDetailsPanel/Preview/SubViewport" node_paths=PackedStringArray("color_picker")]
mesh = SubResource("CapsuleMesh_copcr")
surface_material_override/0 = SubResource("StandardMaterial3D_ae03o")
script = ExtResource("2_w2fsp")
color_picker = NodePath("../../../ColorPicker")

[node name="Camera3D" type="Camera3D" parent="UserDetailsPanel/Preview/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.929873, 0.367881, 0, -0.367881, 0.929873, 0, 1.07879, 2.14059)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="UserDetailsPanel/Preview/SubViewport"]
transform = Transform3D(-0.895631, -0.415864, -0.157805, -0.188985, 0.0346165, 0.98137, -0.402654, 0.908768, -0.109596, 0, 4.54367, 0)

[node name="Label" type="Label" parent="UserDetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 66.0
offset_top = 6.0
offset_right = -67.0
offset_bottom = -237.0
grow_horizontal = 2
grow_vertical = 2
text = "User Details"

[node name="ConnectionDetailsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 624.0
offset_top = 238.0
offset_right = 781.0
offset_bottom = 503.0

[node name="HostButton" type="Button" parent="ConnectionDetailsPanel"]
layout_mode = 0
offset_left = 31.0
offset_top = 35.0
offset_right = 126.0
offset_bottom = 104.0
text = "Host
Game
"

[node name="ClientButton" type="Button" parent="ConnectionDetailsPanel"]
layout_mode = 0
offset_left = 30.0
offset_top = 127.0
offset_right = 125.0
offset_bottom = 196.0
text = "Join
Game
"

[node name="ipv4LineEdit" type="LineEdit" parent="ConnectionDetailsPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 213.0
offset_right = 148.0
offset_bottom = 244.0
text = "127.0.0.1"

[node name="Label" type="Label" parent="ConnectionDetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 5.0
offset_right = -18.0
offset_bottom = -236.0
grow_horizontal = 2
grow_vertical = 2
text = "Connection Details"

[connection signal="pressed" from="ConnectionDetailsPanel/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="ConnectionDetailsPanel/ClientButton" to="." method="_on_client_button_pressed"]
